Fix last groomsman on mobile

--- a/static/bridal-party.css
+++ b/static/bridal-party.css
@@ -98,7 +98,7 @@ h1 {
 
 #last-groomsman {
   width: 100%;
-  height: 40vmax;
+  min-height: 40vmax;
 }
 
 #last-bridesmaid {
